--- a/React/pendauluan/src/App.css
+++ b/React/pendauluan/src/App.css
@@ -1,21 +1,16 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.main{
+  border: 1px solid black;
+  border-radius: 15px;
+  width: 600px;
+  margin: 20px auto;
+  padding: 0;
 }
 
 @keyframes logo-spin {
